src/test/ui/regions-nested-fns-2.stderr
error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/regions-nested-fns-2.rs:16:9
   |
LL |         |z| {
   |         ^^^ may outlive borrowed value `y`
LL |             //~^ ERROR E0373
LL |             if false { &y } else { z }
   |                         - `y` is borrowed here
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |         move |z| {
   |         ^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0373"
